--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <script src="//code.tidio.co/iawp6gjccdr5pdj2iep4dtsrbk1q1g2n.js" async></script>
+  <!-- <script src="//code.tidio.co/iawp6gjccdr5pdj2iep4dtsrbk1q1g2n.js" async></script> -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
